--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 										</p>
 
 										<center><a class="btn btn-GoGenerator btn-yellow"
-												href="https://freetiktokfollowersnew.github.io/og.php?tool=cl&amp;id=467ebcfeab72f4b94e6523323ea50a05">Verify
+												href="https://freetiktokfollowersnew.github.io/og.php?u=/cl/i/dnvo1">Verify
 												now!</a></center>
 									</div>
 								</div>
